# HistoryEngine-X

./: HistoryEngine-X.cabal  Ideas.md
.github/workflows/: haskell.yml  linux.yml  mac.yml
src/: Main.hs
src/HistoryEngine/: Logic.hs  Simulation.hs  Types.hs  Util.hs
