cabal-version:          3.0
name:                   HistoryEngine-X
version:                0.1.0.0
synopsis:               A fantasy world history simulator.
license:                MIT
author:                 Dr Islands
build-type:             Simple

executable history-engine
    main-is:            Main.hs

    other-modules:      HistoryEngine.Types
                        HistoryEngine.Logic
                        HistoryEngine.Simulation
                        HistoryEngine.Util
    
    hs-source-dirs:     src

    build-depends:      base >= 4.14 && < 5,
                        random >= 1.2,
                        mtl >= 2.2,
                        containers >= 0.6.7
    
    default-language:   Haskell2010

    ghc-options:        -Wall